# crates

./: Cargo.toml  Netlify.toml  README.md  index.html  style.css
.github/workflows/: ci.yml
src/: api.rs  lib.rs  main.rs
src/components/: krate.rs  krate_item.rs  mod.rs
src/screen/: krate.rs  mod.rs
src/screens/: explore.rs  explore_screen.rs  krate.rs  krate_screen.rs  mod.rs  search.rs
src/ui/: crate_item.rs  crates.rs  krate.rs  krate_screen.rs  krates_screen.rs  mod.rs
