[package]
name = "crates"
version = "0.1.0"
edition = "2021"

[dependencies]
# concoct = { git = "https://github.com/concoct-rs/concoct" }
concoct = { path = "../concoct" }

wasm-bindgen-futures = "0.4.40"
console_error_panic_hook = "0.1.7"
tracing-wasm = { version = "0.2.1" }
tracing = "0.1.40"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
web-sys = { version = "0.3.66", features = ["InputEvent", "HtmlInputElement"] }
